@@ -41,6 +41,8 @@ ChangeLog (2004.nn.nn):
      (code cleanup of the dynamo parameter handling; switches are no
      longer option but required now)
 - Cleanup:
+   - Corrected the CPU speed detection output as it was proposed
+     Kenneth Morse.
    - Changed the "truly batch oriented" patch behaviour (basically rolled
      back the changes due to the bug report of Kris Strecker).
    - Removed an old left over _DETAIL define depended code (for debugging)
